-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 12
-
Component/s: hotspot
-
b31
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8218221 | 13 | Alex Menkov | P2 | Resolved | Fixed | b07 |
| JDK-8218383 | 12.0.2 | Alex Menkov | P2 | Resolved | Fixed | b01 |
| JDK-8218335 | 12.0.1 | Alex Menkov | P2 | Resolved | Fixed | b06 |
ForceEarlyReturn and PopFrame JCK tests intermittently and randomly fail with Graal.
Need to disable the following optional capabilities when the Graal compiler is enabled:
cap_pop_frame
cap_force_early_return
It is for jdk 12 only.
Need to disable the following optional capabilities when the Graal compiler is enabled:
cap_pop_frame
cap_force_early_return
It is for jdk 12 only.
- backported by
-
JDK-8218221 disable pop_frame and force_early_return caps for Graal
-
- Resolved
-
-
JDK-8218335 disable pop_frame and force_early_return caps for Graal
-
- Resolved
-
-
JDK-8218383 disable pop_frame and force_early_return caps for Graal
-
- Resolved
-
- relates to
-
JDK-8218885 Restore pop_frame and force_early_return functionality for Graal
-
- Resolved
-
-
JDK-8214093 [Graal] jck:vm/jvmti/ForceEarlyReturn tests intermittently and randomly fail with Graal
-
- Closed
-