8218025: disable pop_frame and force_early_return caps for Graal

Reviewed-by: iignatyev, sspitsyn, dholmes